Fix URL constructor deprecated issue.